@@ -2,28 +2,30 @@ import com.example.Cat;
 import com.example.Feline;
 
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 
+@RunWith(MockitoJUnitRunner.class)
 public class CatTest extends BaseTest {
-
-    static Feline feline = new Feline();
-    static Cat cat = new Cat(feline);
+    @Mock
+    static Feline feline;
 
     @Test
     public void test1() {
-
+        Cat cat = new Cat(feline);
         assertEquals("Мяу", cat.getSound());
-
     }
 
     @Test
     public void test2() throws Exception {
-        List<String> exp = new ArrayList(Arrays.asList("Животные", "Птицы", "Рыба"));
-        assertEquals(exp, cat.getFood());
+        Cat cat = new Cat(feline);
+        Mockito.when(feline.eatMeat()).thenReturn(List.of("Привет"));
+        assertEquals(List.of("Привет"), cat.getFood());
     }
 }
